remove some variables, use String.join(), check directly in Storage