@@ -7,12 +7,11 @@ import core.basesyntax.exception.WritingException;
 import core.basesyntax.service.impl.FileWriterServiceImpl;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
 class FileWriterServiceImplTest {
-    private FileWriterServiceImpl fileWriterService = new FileWriterServiceImpl();
+    private static final FileWriterServiceImpl fileWriterService = new FileWriterServiceImpl();
 
     @Test
     void write_nullData_NotOk() {
@@ -22,13 +21,10 @@ class FileWriterServiceImplTest {
 
     @Test
     void write_okData_Ok() throws Exception {
-        String fileName = "src/test/resources/testFile";
-        String expectedString = "onetwo";
-        Path path = Paths.get(fileName);
+        Path path = Path.of("src/test/resources/testFile");
         List<String> stringList = Files.readAllLines(path);
-        StringBuilder stringBuilder = new StringBuilder();
-        stringList.forEach(stringBuilder::append);
-        String actualString = stringBuilder.toString();
+        String actualString = String.join("", stringList);
+        String expectedString = "onetwo";
         assertEquals(expectedString, actualString);
     }
 }
